tests/baselines/reference/for-of21.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of21.ts(14,17): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of21.ts (1 errors) ====
    class Foo { }
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
        [Symbol.iterator]() {
            return this;
        }
    }
    
    for (const v of new FooIterator) {
                    ~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        v;
    }